--- a/kimsuky.html
+++ b/kimsuky.html
@@ -169,7 +169,7 @@
           </div>
           <div class="authors">
   <i class="fa-solid fa-user" aria-hidden="true"></i>
-    <a href="https://pwnbuffer.org/authors/untw0/">Untw0</a></div>
+    <a href="https://pwnbuffer.org/authors/untw0/">pa1va</a></div>
 
           <div class="categories">
   <i class="fa-solid fa-folder" aria-hidden="true"></i>
@@ -620,7 +620,7 @@ A amostra analisada aqui está categorizada como <strong>APT</strong>, <strong>K
 </h2>
 <p>Na minha opinião, conseguimos aprender bastante, especialmente técnicas interessantes de APT que podem ser utilizadas no mundo real.</p>
 <p><strong>Thx for reading!</strong>  
-— <a href="https://www.linkedin.com/in/maiquel-paiva"  class="external-link" target="_blank" rel="noopener">@untw0</a> : )</p>
+— <a href="https://www.linkedin.com/in/maiquel-paiva"  class="external-link" target="_blank" rel="noopener">@pa1va</a> : )</p>
 
       </div>
 
