--- a/kimsuky.html
+++ b/kimsuky.html
@@ -26,7 +26,7 @@
 
 
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Análise de malware - Kimsuky (NORTH KOREAN APT)">
+  <meta name="twitter:title" content="Análise de Malware - Kimsuky (NORTH KOREAN APT)">
   <meta name="twitter:description" content="SUMÁRIO: Link para o cabeçalho Introdução Análise técnica
 2.1. Injeção de C# com Add-Type
 2.2. Ocultação de processos via ShowWindow
