--- a/kimsuky.html
+++ b/kimsuky.html
@@ -38,7 +38,7 @@
 
 <meta property="og:url" content="https://pwnbuffer.org/posts/c/exploring-kimsuky-malware/">
   <meta property="og:site_name" content="pwnbuffer">
-  <meta property="og:title" content="Análise de malware - Kimsuky (NORTH KOREAN APT)">
+  <meta property="og:title" content="Análise de Malware - Kimsuky (NORTH KOREAN APT)">
   <meta property="og:description" content="SUMÁRIO: Link para o cabeçalho Introdução Análise técnica
 2.1. Injeção de C# com Add-Type
 2.2. Ocultação de processos via ShowWindow
