--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
  <pre>
   <hr>
-    * 2025-05-8 12:30 - <a href="kimsuky.html">Malware Analysis - Kimsuky (NORTH KOREAN APT)</a>
+    * 2025-08-26 00:00 - <a href="https://codehawks.cyfrin.io/c/2025-07-secret-vault/s/64">Insecure Access Control in "get_secret" Function</a>
   <hr>
    --[ <a href="about-me.html">ABOUT-ME</a> ]--
  </pre>
 </body>
 </html>
+
