--- a/about-me.html
+++ b/about-me.html
@@ -11,10 +11,13 @@
  <pre>
   <hr>
     Hello everybody, I'm Maiquel Paiva.
+    I'm studying for a Bachelor's Degree in Computer Science.
 
-    Security Reseacher in (Blockchain and Malware).
-    -> Blockchain Security Reseacher @ <a href="https://x.com/0xbl0ck_">0xbl0ck</a>
-    -> Malware Reseacher @ AMRT
+    Skills:
+    • C, Assembly, Rust, Solidity.
+    • Web3, Blockchain Security.
+    • Threat Intel & Hunting.
+    • Malware Analysis & Reverse Engineering.
   <hr>
    --[ <a href="index.html">HOME</a> ]--
  </pre>
